fix(core): align css logical properties

--- a/projects/elements/src/card/card-header.css
+++ b/projects/elements/src/card/card-header.css
@@ -37,5 +37,5 @@
 
 ::slotted(nve-tabs),
 ::slotted(nve-tabs) {
-  margin-bottom: calc(-1 * var(--padding));
+  margin-block-end: calc(-1 * var(--padding));
 }
